--- a/Ashish.html
+++ b/Ashish.html
@@ -1,6 +1,8 @@
 <html>
 <title>History of an html</title>
 <body>
+<h2>Ashish Barapatre</h2>
+<h1>CS24125</h1>
 <p> html stand of hypertext markup language.
 Created in 1990 by sir tim berners-lee.
 who also invented the world wide web.<br>HTML is used to create web pages by defining their structure and content.
