--- a/Ashish.html
+++ b/Ashish.html
@@ -1,13 +1,37 @@
 <html>
-<title>History of an html</title>
-<body>
-<h2>Ashish Barapatre</h2>
+<title>practical no 2 </title>
+<body bgcolor="pink">
+<h1>Ashish Barapatre</h1>
 <h1>CS24125</h1>
-<p> html stand of hypertext markup language.
-Created in 1990 by sir tim berners-lee.
-who also invented the world wide web.<br>HTML is used to create web pages by defining their structure and content.
-.the first version of HTML was written by Berners-lee in 1993.
-.The first web page was created by Berners-lee on august 6,1991.<br>It was hosted on a nest computer at cdern the european organization for nuclear research.
-</p>
-</body>
-</html>
+ <h1><u>*list of programming*</u></h1>
+    <ol>
+        <li>C language</li>
+        <li>C++ language</li>
+        <li>java language</li>
+        <li>python language</li>
+        <li>javascript language</li>
+    </ol>
+   <h1>*list of sport player*</h1>
+    <ul>
+        <li>virat kohli</li>
+        <li>M.s dhoni</li>
+        <li>Rohit sharma</li>
+        <li>shubman gill</li>
+    </ul>
+    <h2><u>*list of sport and dancing community*</u></h2>
+    <dl>
+        <dt><b><u>Dancing community</u></b></dt>
+        <dd>Pranay </dd>
+        <dd>sahil</dd>
+        <dd>aditya</dd>
+        <dd>ashish</dd>
+    </dl>
+    <dl>
+        <dt><b><u>*Sports community*<b><u></dt>
+        <dd>P.A</dd>
+        <dd>S.B</dd>
+        <dd>A.T</dd>
+        <dd>A.B</dd>
+    </dl>
+    </body>
+    </html>
